# paperHands

./: .env.example  .gitignore  README.md  pyproject.toml
broker/: __init__.py  alpaca.py  simulated.py
core/: __init__.py  config.py  contracts.py  logging.py
dashboard/: __init__.py  export.py
dashboard/web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
dashboard/web/public/: data.json
dashboard/web/src/: App.jsx  styles.css
data/: __init__.py  base.py  cache.py  factory.py  frame.py  tiingo.py
docs/: PHASE1_SPEC_backtest.md  PHASE2_SPEC_alpaca_paper_loop.md  PROJECT.md
engine/: __init__.py  engine.py  factory.py  market.py  result.py
ingest/: __init__.py  assembler.py  edgar.py  factory.py  feeds.py  guard.py  snapshot.py  wsb.py
legacy/: README.md  __init__.py
legacy/strategy/: __init__.py  guard.py  llm.py  rules.py
record/: __init__.py  benchmark.py  cycle_store.py  cycle_summary.py  recorder.py  report.py  stats.py  store.py  summary.py
risk/: __init__.py  gate.py  params.py
runner/: __init__.py  backtest.py  compare.py  config.py  cycle.py  evaluate.py  report.py  run.py  schedule.py  smoke.py  walkforward.py  windows.py
screen/: __init__.py  result.py  screen.py  tiingo_universe.py  universe.py
screen/seed/: universe.csv
signals/: __init__.py  indicators.py  signals.py  signalset.py
strategy/: __init__.py  anthropic_client.py  client.py  context.py  guard.py  llm.py  rebalance.py  regime.py  rules.py  strategy.py  yolo.py
tests/: conftest.py  test_alpaca_broker.py  test_anthropic_client.py  test_broker.py  test_cache.py  test_cycle.py  test_cycle_store.py  test_dashboard.py  test_dashboard_yolo.py  test_data_provider.py  test_edgar.py  test_engine.py  test_engine_rebalance.py  test_engine_yolo.py  test_hype_signals.py  test_ingest.py  test_rebalance.py  test_record.py  test_regime.py  test_report.py  test_risk_gate.py  test_risk_gate_rebalance.py  test_runner.py  test_schedule.py  test_screen.py  test_signals.py  test_smoke.py  test_strategy.py  test_tiingo_universe.py  test_walkforward.py  test_wsb.py  test_yolo.py
