[project]
name = "paperhands"
version = "0.0.1"
description = "A self-benchmarking algorithmic trading experiment — backtest harness first, paper/live later."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.32",
]

# Heavier libraries still deferred to the slices that need them: backtrader (engine),
# anthropic (llm strategy mode).

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pandas-stubs",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Top-level packages matching the PROJECT.md module boundaries. Kept at the repo root
# (not under src/) so the specs' exact commands — e.g. `python -m runner.smoke` — work.
packages = [
    "core",
    "data",
    "ingest",
    "screen",
    "signals",
    "strategy",
    "risk",
    "broker",
    "engine",
    "record",
    "runner",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
# Pure modules must stay clean; relax only for tests.

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
