[project]
name = "paperhands"
version = "0.0.1"
description = "A self-benchmarking algorithmic trading experiment — backtest harness first, paper/live later."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.32",
]

# Optional integration libraries live in the extras below: alpaca-py (paper/live execution)
# and anthropic (llm strategy mode). They are lazy-imported so the package imports without them.

[project.optional-dependencies]
alpaca = ["alpaca-py>=0.30"]
llm = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pandas-stubs",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Top-level packages matching the PROJECT.md module boundaries. Kept at the repo root
# (not under src/) so the specs' exact commands — e.g. `python -m runner.smoke` — work.
packages = [
    "core",
    "data",
    "ingest",
    "screen",
    "signals",
    "strategy",
    "risk",
    "broker",
    "engine",
    "record",
    "runner",
    "dashboard",
    "legacy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
# Pure modules must stay clean; relax only for tests.

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Optional, lazy-imported SDK (llm strategy mode); may be absent at type-check time.
[[tool.mypy.overrides]]
module = "anthropic"
ignore_missing_imports = true

# Optional, lazy-imported SDK (Alpaca execution); may be absent at type-check time.
[[tool.mypy.overrides]]
module = "alpaca.*"
ignore_missing_imports = true
